--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -4,7 +4,7 @@ parameters:
 services:
     hgabka_kunstmaan_settings.settings_manager:
         class: '%hgabka_kunstmaan_settings.settings_manager.class%'
-        arguments: ['@doctrine']
+        arguments: ["@doctrine", "%kernel.cache_dir%"]
 
     hgabka_kunstmaan_settings.settings_twig_extension:
         class: Hgabka\KunstmaanSettingsBundle\Twig\HgabkaKunstmaanSettingsTwigExtension
