--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -44,4 +44,4 @@ services:
             - { name: security.voter }
         public: false
 
-    '%hgabka_kunstmaan_settings.settings_manager.class%': '@hgabka_kunstmaan_settings.settings_manager'
+    Hgabka\KunstmaanSettingsBundle\Helper\SettingsManager: '@hgabka_kunstmaan_settings.settings_manager'
